# wave

./: .gitignore  .pre-commit-config.yaml  README.md  gen-pytorch-rocm-requirements.py  mypy.ini  pyproject.toml  pytest.ini  pytorch-cpu-requirements.txt  pytorch-rocm-requirements.txt  requirements-iree-pinned.txt  requirements-iree-stable.txt  requirements.txt  setup.py  version.json
.devcontainer/: Dockerfile  devcontainer.json
.github/instructions/: water-review.instructions.md
.github/workflows/: build_and_release.yml  build_packages.yml  ci-gpu-35x.yaml  ci-gpu-rdna.yaml  ci-gpu.yaml  ci-happy.yml  ci-tk.yaml  ci.yaml  perf.yaml  pre-commit.yaml  pypi-publish.yml  test_build_release.yml  update_iree_requirement_pins.yml
build_tools/: build_linux_package.sh  build_release.py  compute_local_version.py  promote_whl_from_rc_to_final.py  update_iree_requirement_pins.py
demo_artifacts/logs/: gemm_backend_summary.csv
demo_artifacts/patch/: reordered_gemm_test.patch  tilelang_benchmark_tilelang_matmul.patch  tvm_ms_ansor.patch  wave_passes.patch
demo_artifacts/scripts/: mm_ansor.py  mm_ms.py  run_all_tvm_ansor.sh  run_all_tvm_ms.sh
docs/: .readthedocs.yaml  README.md  conf.py  index.rst  persistent_gemm_tutorial.rst  scc-sgpr-promotion-investigation.md  wave_schedule_2.rst
docs/core/: aot.rst  dynamo.rst  runtime.rst  support.rst  tools.rst
docs/infra/: publishing.md  releasing.md
docs/kernel/: wave.rst  wave_codegen.rst  wave_ops.rst
docs/wave/: asm_backend.rst  buffer_and_swizzle.rst  canonical_ir_format.md  conv.rst  debugging.rst  four_stage_scheduler.rst  gather_to_shared.rst  gemm_tutorial.rst  getting_started.rst  ir_design_notes.rst  minimize_global_loads.rst  multibuffering.rst  optimize_schedule.rst  pingpong_reordering.rst  register_allocation.rst  shared_memory.rst  shared_memory_barriers.rst  wave.rst  wave_schedule.rst  workgroup_reordering.rst
examples/aot_mlp/: mlp_export_simple.py
examples/eager_mlp/: mlp_eager_simple.py
examples/jupyter/: matrix_addition.ipynb  wave_gemm_example.ipynb
examples/python/: 1_dynamic_mapping.py  2_control_flow.py  3_atomics.py  4_reductions.py  5_gemm.py  6.1_schedule.py  6.2_schedule.py  7.1_schedule.py  README.md  test_sympy_diff.py  utils.py
examples/resnet-18/: resnet-18.py
examples/runtime_torture/: launchable_torture.py
lit_tests/: lit.cfg.py
tests/: conftest.py
tests/aot/: api_test.py  args_test.py  compiled_exported_program_test.py  decompositions_test.py  dynamic_shape_export_test.py  functionalize_test.py  fx_programs_test.py  fx_programs_test_device.py  globals_test.py  iree_procedural_test.py  jittable_test.py  non_strict_export_test.py  params_test.py  turbine_generate_test.py
tests/dynamo/: importer_basic_test.py  importer_dynamic_test.py  llama_test.py  mninst_test.py  tensor_test.py  testutils.py  type_conversion_test.py
tests/examples/: aot_mlp_test.py
tests/kernel/: aot_kernel_test.py  arith_test.py  dist_gemm_test.py  (+17 more)
water/: CMakeLists.txt  README.md  llvm-sha.txt  requirements-dev.txt
water/lib/Dialect/NormalForm/IR/: CMakeLists.txt
water/lib/Dialect/Wave/IR/: CMakeLists.txt  IndexExpr.cpp  WaveAttrs.cpp  WaveDialect.cpp  WaveInterfaces.cpp  WaveOps.cpp  WaveTypes.cpp  WaveUtils.cpp
water/python/: CMakeLists.txt  WaterExtensionNanobind.cpp  capi.lds
water/python/water_mlir/: sympy_to_affine_converter.py
water/python/water_mlir/dialects/: WaveOps.td  wave.py
water/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
water/test/Analysis/: in-use-for-speculation.mlir
water/test/Dialect/Wave/: attr-constraint-invalid.mlir  attr-constraint.mlir  attr-type-invalid.mlir  attr-type.mlir  detect-normal-forms.mlir  expand-variadic-reductions.mlir  infer-index-exprs-lattice.mlir  infer-index-exprs.mlir  infer-types-force.mlir  infer-types.mlir  lower-wave-to-mlir-invalid.mlir  lower-wave-to-mlir.mlir  normal-forms-invalid.mlir  normal-forms.mlir  op-modification.mlir  ops-invalid.mlir  ops.mlir  propagate-elements-per-thread.mlir  python_bindings.py  resolve-distributed-allocations.mlir
water/test/Integration/: attention_lowering.mlir  matmul_lowering.mlir  matmul_lowering_shmem.mlir
water/test/Tools/: json-diagnostics.mlir
water/test/Transforms/: alloc-to-alloca.mlir  assert-in-bounds.mlir  check-static-assertions.mlir  drop-transform-ops.mlir  gpu-module-to-binary-dump.mlir  gpu-module-to-binary-override.mlir  gpu-module-to-binary.mlir  gpu-to-gpu-runtime.mlir  lowered_gemm_pipelined.mlir  memref-decomposition.mlir  slp-vectorize.mlir  wave_gemm.mlir
water/test/lib/Dialect/: CMakeLists.txt  WaterTestDialect.cpp  WaterTestDialect.h  WaterTestDialect.td
water/test/lib/Transforms/: CMakeLists.txt  Passes.cpp  Passes.h  Passes.td  TestInUseAnalysis.cpp  TestWaveDialectConstructors.cpp  TestWaveDialectFunctions.cpp  TestWaveDialectInferIndexExprs.cpp
water/test/python/: sympy_converter.py
water/tools/: CMakeLists.txt
water/tools/water-opt/: CMakeLists.txt  WaterOptMain.cpp  water-opt.cpp
wave_lang/: __init__.py
wave_lang/kernel/wave/execution_engine/: CMakeLists.txt  __init__.py  bindings.cpp  buffer_utils.cpp  buffer_utils.h  execution_engine.cpp  execution_engine.h  execution_engine.py  register_dialects.cpp  wave_execution_engine.lds  wave_hip_runtime.cpp  wave_hip_runtime.h
wave_lang/kernel/wave/runtime/: CMakeLists.txt  hip_types.h  runtime.cpp
waveasm/: waveasm_e2e.py
waveasm/lib/Transforms/: ArithLegalization.cpp  AssemblyEmitter.cpp  BufferLoadStrengthReduction.cpp  CMakeLists.txt  ExtractScalarization.cpp  GPUModuleToBinary.cpp  HazardMitigation.cpp  LinearScanPass.cpp  LinearScanRegAlloc.cpp  LiteralMaterialization.cpp  Liveness.cpp  MetadataEmitter.cpp  Peephole.cpp  RegionBuilder.cpp  SCCVerifier.cpp  ScopedCSE.cpp  TranslateFromLLVMDialect.cpp  TranslateFromMLIR.cpp  VGPRCompaction.cpp
waveasm/lib/Transforms/handlers/: AMDGPUHandlers.cpp  AffineHandlers.cpp  ArithHandlers.cpp  CMakeLists.txt  GPUHandlers.cpp  HandlerUtils.cpp  Handlers.h  MemRefHandlers.cpp
waveasm/tools/waveasm-translate/: CMakeLists.txt  waveasm-translate.cpp
(+7133 files in other folders)
