[build-system]
requires = ["setuptools", "wheel", "cmake", "ninja", "nanobind < 2.10", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
timeout = 300
testpaths = [
  "tests",
]
# Because of the pytest collection process, it will import all modules from all
# tests, which is undesirable for mlir/wave interfacing tests. Exclude them
# from the global run.
addopts = "--ignore=tests/mlir_wave_iface"

[tool.ruff]
lint.select = ["F401", "I001"]  # remove unused imports and sort imports
fix = true
force-exclude = true
# as we refactor wave repo, we will include relevant dir
extend-exclude = ["docs/*", "build_tools/*", "tests/*", "iree/*", ".*__init__.py"]
