[build-system]
requires = [
    "setuptools~=75.8.2",
    "setuptools-scm~=9.2.2",
    "wheel~=0.45.1",
    "cmake~=3.31.6",
    "ninja~=1.11.1",
    "nanobind~=2.9.2",
    "setuptools-rust~=1.11.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "wave-lang"
description = "Wave Language for Machine Learning"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "IREE Authors", email = "iree-technical-discussion@lists.lfaidata.foundation"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "dill",
    "iree-base-compiler~=3.12.0rc",
    "iree-base-runtime~=3.12.0rc",
    "ml_dtypes",
    "numpy",
    "sympy",
    "torch>=2.6,<2.10",
    "typing_extensions",
]

dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "filecheck~=1.0.2",
    "lit~=18.1.8",
    "pytest~=8.4.1",
    "pytest-timeout~=2.4.0",
    "pytest-xdist~=3.8.0",
]
dev = [
    "wave-lang[testing]",
    "mypy~=1.8.0",
    "pre-commit~=4.5.1",
    "ruff~=0.12.8",
]
docs = [
    "sphinx~=8.1.3",
    "sphinx-autobuild~=2024.10.3",
    "sphinx-rtd-theme~=3.0.2",
    "sphinxcontrib-mermaid~=1.0.0",
    "myst-parser~=4.0.0",
    "shibuya~=2026.1.9",
]

[project.urls]
Homepage = "https://iree.dev/"
Repository = "https://github.com/iree-org/wave/"
Documentation = "https://wave.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
include = ["wave_lang", "wave_lang.*"]

[[tool.setuptools-rust.ext-modules]]
target = "aplp_lib"
path = "wave_lang/kernel/wave/scheduling/aplp/Cargo.toml"

[tool.pytest.ini_options]
timeout = 300
testpaths = ["tests"]
# Because of the pytest collection process, it will import all modules from all
# tests, which is undesirable for mlir/wave interfacing tests. Exclude them
# from the global run.
addopts = "--ignore=tests/mlir_wave_iface"

[tool.ruff]
lint.select = ["F401", "I001"]  # remove unused imports and sort imports
fix = true
force-exclude = true
# as we refactor wave repo, we will include relevant dir
extend-exclude = ["docs/*", "build_tools/*", "tests/*", "iree/*", ".*__init__.py"]

[tool.mypy]
explicit_package_bases = true
mypy_path = "."
packages = ["wave_lang"]

[[tool.mypy.overrides]]
module = [
    "iree.build.*",
    "iree.compiler.*",
    "iree.runtime.*",
    "functorch.compile.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "wave_lang.importers.fx_importer.*",
    "wave_lang.kernel.*",
    "wave.tools.interpreter",
    "tests.tools.*",
]
ignore_errors = true
